Update and rename Detail.cshtml to UserDetail.cshtml

--- a/UserDetail.cshtml
+++ b/UserDetail.cshtml
@@ -1,4 +1,4 @@
-﻿@model BLG.IT.Web.Features.BLGUserAdmin.Detail.Model
+﻿@model [custom].Detail.Model
 
 <div class="card mb-3">
     <div class="card-header">
